@@ -1,4 +1,5 @@
-Steffen Macke <Steffen_Macke@dorsch.com.jo>
+Maher Abdel Karim <Maher_Karim@dorsch.com.jo>
+Steffen Macke <sdteffen@sdteffen.de>
 Matthias Toerner <Matthias.Toerner@dorsch.de>
 Mark Cederholm <piersen@primenet.com>
 Juergen Evert <JurgenEvert@aol.com> - Export project and data to folder script
