@@ -10,12 +10,16 @@
       <year>2004 - 2006</year>
       <holder>DORSCH Consult</holder>
     </copyright>
+    <copyright>
+      <year>2007</year>
+      <holder>Steffen Macke</holder>
+    </copyright>
     <author>
       <personname>
 	<firstname>Steffen</firstname>
 	<surname>Macke</surname>
       </personname>
-      <email>Steffen_Macke@dorsch.com.jo</email>
+      <email>sdteffen@sdteffen.de</email>
     </author>
     <pubdate>$Date$</pubdate>
     <legalnotice>
@@ -43,13 +47,20 @@
     released under the
     terms of the GNU Lesser General License (LGPL) - the full source code
     is available (Open Source).</para>
-  <para>This manual describes version 1.2.9 of the <citetitle>DC Processing 
+  <para>This manual describes version 1.3.0 of the <citetitle>DC Processing 
     Extension</citetitle>.</para>
   <sect2 id="news">
     <title>What's New?</title>
     <indexterm><primary>news</primary></indexterm>
     <para>A summary of changes in the different versions of the DC Processing
       Extension.</para>
+    <sect3 id="version_1_2_10">
+      <title>Version 1.2.10</title>
+      <itemizedlist>
+        <listitem><para>&quot;Segmentize Polylines&quot; will now work on the selection,
+        if there is a selection.</para></listitem>
+      </itemizedlist>
+    </sect3>  
     <sect3 id="version_1_2_9">
       <title>Version 1.2.9</title>
       <itemizedlist>
@@ -439,6 +450,8 @@
 	maximum segment length is shorter than the minimum segment length, the 
 	last two segments are merged again and split into one segment with the
 	minimum segment length and the remainder.</para>
+	<para>If there is a selection, only selected lines will be segmentized.
+	  If there is no selection, all lines will be segmentized.</para>
     </sect3>
     
     <sect3 id="calculate_node_angles">
