@@ -1,3 +1,9 @@
+2007-09-23  Steffen Macke <sdteffen@sdteffen.de>
+
+	* AUTHORS: Added Maher, updated email address
+	* doc/en/dcprocessing.xml: Updated documentation: 1.3.0 release notes,
+	"Segmentize Polylines" documentation
+	
 2007-09-18  Maher Abdel Karim <Maher_karim@dorsch.com.jo>
 	
 	* DCProcess.segmentizePllTheme:consider selection
